# virtmach-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
compiler/: Cargo.toml  surface.csv
examples/: README.md  compile.rs  helpers.rs  int_surface_sdl2.rs  int_surface_term.rs  run.rs  surface_sdl2.rs  surface_term.rs
examples/programs/: count.txt  primitives.txt  starfield.txt
src/: atom.rs  compile.rs  decompile.rs  errors.rs  interrupts.rs  lib.rs  opcodes.rs  processor.rs  program.rs  reporting.rs  virtmach.rs  writer.rs
src/interrupts/: dummy.rs  math.rs  proc.rs  random.rs  surface.rs
